@@ -4,7 +4,7 @@
 
 # ---- General ---------------------------------------------------------------------
 
-buildversion=100
+buildversion=101
 
 year=2010
 name=SemanticTurkey
